# ML-tools

./: LICENSE  README.md  combining_4_datasets.ipynb  demo1.ipynb
NER/: README.md  pretty_print_ne.py
Recurrence/: README.md  exact_sequence_finder.py  test_exact_sequence_finder.py
SNGP/: README.md  gaussian_process.py  make_moons_demo.ipynb  random_fourier_features.py  sngp_classification_layer.py  test_gp.py
clustering/: README.md  clustering.py  example.py
elyra/: README.md  evaluate.ipynb  getdata.ipynb  ntropy-pipeline.pipeline  train.ipynb
mini-scheduler/: run.py
parallel_cross_encoder/: README.md  Test.ipynb  Train.ipynb  pyproject.toml
parallel_cross_encoder/labeller/: __init__.py
parallel_cross_encoder/labeller/src/: dataset.py  test.py  train.py
parallel_cross_encoder/labeller/src/models/: bart_model.py  bert_model.py  lightning_model.py  multilabel_helper.py
parallel_cross_encoder/labeller/tests/: test_bart.py  test_bert.py  test_configs.py  test_dataset.py  test_parralel_multilabel.py  test_pl_model.py
parallel_cross_encoder/parallel_cross_encoder/: configs.py  dataset.py  test.py  train.py
parallel_cross_encoder/parallel_cross_encoder/models/: bart_model.py  bert_model.py  lightning_model.py
parallel_cross_encoder/tests/: test_bart.py  test_bert.py  test_configs.py  test_dataset.py  test_parralel_multilabel.py  test_pl_model.py
