[tool.poetry]
name = "labeller"
version = "0.1.0"
description = "Cross encoder labeller"
authors = ["labelling <labelling@ntropy.network>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^4.12.3"
torch = "^1.10.0"
scikit-learn = "^1.0.1"
pandas = "^1.3.4"
pydantic = "^1.8.2"
sentencepiece = "^0.1.96"
tqdm = "^4.62.3"
psutil = "^5.8.0"
pytorch-lightning = "^1.5.5"
datasets = "^2.0.0"
ipywidgets = "^7.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
notebook = "^6.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
